<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mission"
        android:icon="@drawable/baseline_circle_24"
        android:title="@string/our_mission"/>

    <item android:id="@+id/promoteSustainableFarming"
        android:icon="@drawable/baseline_circle_24"
        android:title="@string/promoting_sustainable_farming"/>

    <item android:id="@+id/educationalResource"
        android:icon="@drawable/baseline_circle_24"
        android:title="@string/educational_resources"/>

    <item android:id="@+id/communityCollaboration"
        android:icon="@drawable/baseline_circle_24"
        android:title="@string/community_and_collaboration"/>

    <item android:id="@+id/zeroHunger"
        android:icon="@drawable/baseline_circle_24"
        android:title="@string/zero_hunger_initiative"/>

    <item android:id="@+id/joinFarmanac"
        android:icon="@drawable/baseline_circle_24"
        android:title="@string/join_the_farmanac_community"/>
</menu>