<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FaqFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/faqTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/faq_title"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/backImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backImage"
            app:layout_constraintTop_toTopOf="@+id/backImage" />

        <TextView
            android:id="@+id/faqP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faq_margin_top"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/faq1"
            app:layout_constraintTop_toBottomOf="@id/faqTitle"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/faqP2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faq_margin_top"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/faq2"
            app:layout_constraintTop_toBottomOf="@id/faqP1"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/faqP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faq_margin_top"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/faq3"
            app:layout_constraintTop_toBottomOf="@id/faqP2"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/faqP4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faq_margin_top"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/faq4"
            app:layout_constraintTop_toBottomOf="@id/faqP3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>