<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PrivacyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/troubleshootTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_title"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/backImage"
            app:layout_constraintBottom_toBottomOf="@id/backImage"
            app:layout_constraintStart_toEndOf="@id/backImage"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/privacySubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Privacy Policy"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/troubleshootTitle" />

        <TextView
            android:id="@+id/troubleshootP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/policy1"
            app:layout_constraintTop_toBottomOf="@id/privacySubtitle"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/troubleshootP2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faq_margin_top"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/policy2"
            app:layout_constraintTop_toBottomOf="@id/troubleshootP1"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/troubleshootP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faq_margin_top"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/policy3"
            app:layout_constraintTop_toBottomOf="@id/troubleshootP2"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/troubleshootP4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faq_margin_top"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/policy4"
            app:layout_constraintTop_toBottomOf="@id/troubleshootP3"
            tools:layout_editor_absoluteX="0dp" />


        <TextView
            android:id="@+id/TermsSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Terms of Services"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/troubleshootP4" />

        <TextView
            android:id="@+id/TermsP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:padding="10dp"
            android:text="@string/tos1"
            app:layout_constraintTop_toBottomOf="@id/TermsSubtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>