<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GetStartedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        >

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/getStartedTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Getting Started"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/backImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backImage"
            app:layout_constraintTop_toTopOf="@+id/backImage" />

            <TextView
                android:id="@+id/getStartedP1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/custom_border"
                android:text="@string/get_started_p1"
                android:layout_marginTop="@dimen/faq_margin_top"
                app:layout_constraintTop_toBottomOf="@id/getStartedTitle"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/getStartedP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/custom_border"
                android:text="@string/get_started_p2"
                android:layout_marginTop="@dimen/faq_margin_top"
                app:layout_constraintTop_toBottomOf="@id/getStartedP1"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/getStartedP3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/custom_border"
                android:text="@string/get_started_p3"
                android:layout_marginTop="@dimen/faq_margin_top"
                app:layout_constraintTop_toBottomOf="@id/getStartedP2"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/getStartedP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/custom_border"
                android:text="@string/get_started_p4"
                android:layout_marginTop="@dimen/faq_margin_top"
                app:layout_constraintTop_toBottomOf="@id/getStartedP3"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>